# haskell-tree-sitter

./: .gitmodules
tree-sitter-clojure/: tree-sitter-clojure.cabal
tree-sitter-clojure/TreeSitter/: Clojure.hs
tree-sitter-clojure/internal/TreeSitter/Clojure/: Internal.hs
