cabal-version:       2.2
name:                tree-sitter-clojure
version:             0.1.0.0
synopsis:            Tree-sitter grammar/parser for Clojure
description:         This package provides a parser for Clojure suitable for use with the tree-sitter package.
license:             BSD-3-Clause
homepage:            https://github.com/oakmac/tree-sitter-clojure#readme
author:              
maintainer:          
copyright:           
category:            Tree-sitter, Clojure
build-type:          Simple

library
  exposed-modules:     TreeSitter.Clojure
  build-depends:       base              >= 4.12 && < 5
                     , tree-sitter      ^>= 0.1.0.0
                     , template-haskell
                     , tree-sitter-clojure-internal
  default-language:    Haskell2010

library tree-sitter-clojure-internal
  exposed-modules:     TreeSitter.Clojure.Internal
  hs-source-dirs:      internal
  build-depends:       base         >= 4.12 && < 5
                     , tree-sitter ^>= 0.1.0.0
  default-language:    Haskell2010
  Include-dirs:        vendor/tree-sitter-clojure/src
  install-includes:    tree_sitter/parser.h
  c-sources:           vendor/tree-sitter-clojure/src/parser.c
  extra-libraries:     stdc++

source-repository head
  type:     git
  location: https://github.com/tree-sitter/haskell-tree-sitter
